Log truncation is now handled as the file is read in so thaat the hole log is no longer held in memory. Also added the option to choose whether to truuncate the log or not.

--- a/src/main/resources/webapp/css/style.css
+++ b/src/main/resources/webapp/css/style.css
@@ -125,6 +125,14 @@ body
         border-bottom: 4px solid #CCCCCC;
     }
     /**** Table Tab Style End ****/
+
+    /**** Log Tab Style Start ****/
+    form.logTabForm
+    {
+        margin: 0;
+        padding: 0;
+    }
+    /**** Log Tab Style End ****/
 /**** Tab Style End ****/
 
 
